# TravisTest

./: .gitignore  .travis.yml  README.md  main.cpp  makefile
src/: BuildInfo.hpp.in  CMakeLists.txt  main.cpp
src/lib/: CMakeLists.txt  SomeFile.cpp  SomeFile.hpp
